# sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  publish.yml
tests/: __init__.py  conftest.py  test_exceptions.py  test_models.py  test_pagination.py  test_resources.py
tests/fixtures/: attribute_detail.json  attribute_presets_list.json  attributes_list.json  badges_list.json  bundle_offers_list.json  coupon_detail.json  coupons_list.json  customer_detail.json  customers_list.json  empty_list.json  loyalty_customer.json  loyalty_program.json  metafields_list.json  order_credit_notes.json  order_detail.json  order_vouchers.json  orders_list.json  orders_list_default.json  orders_list_tiny.json  product_categories_list.json  product_category_detail.json  product_detail.json  product_images_list.json  product_notifications_list.json  product_settings.json  product_stocks_list.json  product_vouchers_list.json  products_list.json  variant_create_response.json
zid/: __init__.py  auth.py  client.py  exceptions.py  http.py  pagination.py  types.py
zid/models/: __init__.py  abandoned_cart.py  base.py  bundle_offer.py  coupon.py  customer.py  delivery_option.py  geography.py  location.py  loyalty.py  order.py  payment_method.py  reverse_order.py  store.py  webhook.py
zid/models/product/: __init__.py  _attribute.py  _base.py  _category.py  _customization.py  _notification.py  _stock.py  _voucher.py
zid/resources/: __init__.py  abandoned_carts.py  base.py  bundle_offers.py  coupons.py  customers.py  delivery_options.py  geography.py  locations.py  loyalty.py  orders.py  payment_methods.py  reverse_orders.py  stores.py  webhooks.py
zid/resources/products/: __init__.py  _attributes.py  _base.py  _categories.py  _customizations.py  _images.py  _notifications.py  _stocks.py  _variants.py  _vouchers.py
