[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zid"
version = "0.1.0"
description = "Python SDK for the Zid e-commerce platform API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["zid"]

[tool.hatch.build.targets.wheel.force-include]
"zid/py.typed" = "zid/py.typed"
