[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zid-client"
version = "0.1.1"
description = "Official Python SDK for the Zid e-commerce platform API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["zid", "ecommerce", "sdk", "api", "python", "zid.sa", "arabic-ecommerce"]
authors = [
    { name = "Muath Almansour", email = "muath.almansour@zid.sa" },
]
maintainers = [
    { name = "Muath Almansour", email = "muath.almansour@zid.sa" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/zidsa/sdk-python"
Repository = "https://github.com/zidsa/sdk-python"
Issues = "https://github.com/zidsa/sdk-python/issues"
Changelog = "https://github.com/zidsa/sdk-python/releases"

[tool.hatch.build.targets.wheel]
packages = ["zid"]

[tool.hatch.build.targets.wheel.force-include]
"zid/py.typed" = "zid/py.typed"
